# upload-directory-local-host

./: .gitignore  Cargo.toml
src/: main.rs  s3_uploader.rs
